<resources>
    <string name="app_name">Quản lý thu chi</string>

    <string name="common_action_close">Close</string>
    <string name="common_action_save">Save</string>

    <string name="menu_item_add">Add</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_about_app">About App</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_version_app">Version %s</string>
    <string name="menu_item_khoanthu">Khoản thu</string>
    <string name="menu_item_khoanchi">Khoản chi</string>
    <string name="menu_item_thongke">Thống kê</string>
    <string name="menu_item_gioithieu">Giới thiệu</string>
    <string name="menu_item_thoat">Thoát</string>

    <string name="mainscreen_add_catergory">Add Category</string>
    <string name="mainscreen_add_note">Add Note</string>
    <string name="mainscreen_edit_note">Edit Note</string>
    <string name="mainscreen_empty_note">Your note list is empty, let start to create your first note now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="note_detail_share">Share</string>
    <string name="note_detail_delete">Delete</string>
    <string name="note_detail_category">Category</string>
    <string name="note_detail_note_detail">Detail</string>
    <string name="note_detail_other_information">Other Information</string>
    <string name="note_detail_map_location">Map Location</string>
    <string name="note_detail_note_name_hint">Name</string>
    <string name="note_detail_note_detail_hint">Description</string>
    <string name="note_detail_add_note_hint">Your Note (Can Add Later)</string>
    <string name="note_detail_address_hint">Address</string>

</resources>
